# climate-utils

./: .gitignore  CLAUDE.md  PRD.md  README.md  README_AI.md  pyproject.toml  requirements.txt  test_solar_angles.py
.cursor/rules/: create-prd.mdc  generate-tasks.mdc  pandas-frequency-strings.mdc  process-task-list.mdc  user-rules.mdc
.devcontainer/: Dockerfile  devcontainer.json
docs/: dataframe_types_and_validation.md  epw_file_structure.md
examples/: dataframe_validation_example.py  solar_components_example.py
src/climate_utils/: __init__.py  epw.py  psychrometrics_utils.py  solar.py  state_point.py  types.py  wind.py  wind_analysis.py
tests/: EGY_JS_Sharm.Sheikh.Intl.AP.624639_TMYx.epw  USA_CA_San.Francisco.Intl.AP.724940_TMYx.epw  __init__.py  conftest.py  test_epw.py  test_integration.py  test_solar.py  test_state_point.py  test_wind.py
